# mudzidzi-ai-backend

./: .env.example  .gitignore  README.md  docker-compose.yml
ai-service/: requirements.txt
ai-service/app/: main.py
crates/analytics/: Cargo.toml
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/auth/: Cargo.toml
crates/common/src/: config.rs  jwt.rs  lib.rs
crates/questions/src/: lib.rs
docs/: architecture.md
migrations/: 20260626120001_create_schools.down.sql  20260626120002_create_users.down.sql  20260626120002_create_users.up.sql  20260626120004_create_topics.down.sql  20260626120005_create_topic_dependencies.down.sql  20260626120006_create_questions.up.sql  20260626120007_create_attempts.up.sql  20260626120008_create_mastery_scores.up.sql  20260626120009_create_recommendations.up.sql  20260626120010_seed_topics.down.sql  20260626120010_seed_topics.up.sql
rust-core/: Cargo.toml
rust-core/crates/analytics/src/: lib.rs
rust-core/crates/api/: Cargo.toml
rust-core/crates/api/src/: main.rs
rust-core/crates/auth/: Cargo.toml
rust-core/crates/auth/src/: dto.rs  handlers.rs  lib.rs  repository.rs  router.rs  validation.rs
rust-core/crates/common/: Cargo.toml
rust-core/crates/common/src/: cache.rs  db.rs  error.rs  extractors.rs  jwt.rs  lib.rs  password.rs  state.rs
rust-core/crates/questions/: Cargo.toml
rust-core/crates/students/: Cargo.toml
rust-core/crates/students/src/: dto.rs  handlers.rs  lib.rs  repository.rs  router.rs  streak.rs
rust-core/migrations/: 20260626120001_create_schools.up.sql  20260626120003_create_students_and_teachers.down.sql  20260626120004_create_topics.up.sql  20260626120005_create_topic_dependencies.up.sql  20260626120006_create_questions.down.sql  20260626120008_create_mastery_scores.down.sql
