[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/common",
    "crates/auth",
    "crates/students",
    "crates/questions",
    "crates/analytics",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
redis = { version = "1", features = ["tokio-comp", "connection-manager"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2 = "0.5"