[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
sqlx.workspace = true
redis.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
chrono.workspace = true
uuid.workspace = true
dotenvy.workspace = true